# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
page_loader/: page_loader.py
page_loader/scripts/: page_loader.py
tests/: test_page_loader.py
tests/fixtures/: dest-mysite-com-page-1.txt  source-mysite-com-page-1.html  source-mysite-com-page-1.txt
tests/fixtures/dest/: mysite-com-page-1.html
tests/fixtures/dest/mysite-com-page-1_files/: mysite-com-script.js
